--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
 </head>
 <body>
     <a-scene>
-      <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
-      <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
-      <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
-      <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
+      <a-box position="2 1 -4" rotation="0 45 0" color="#23BAC4"></a-box>
+      <a-sphere position="-1 0.5 -3" radius="1.25" color="#E36B2C"></a-sphere>
+      <a-cylinder position="0 1.25 -5" radius="0.5" height="1.5" color="#EF280F"></a-cylinder>
+      <a-plane position="1 0.75 -3" rotation="-90 0 0" width="4" height="4" color="#C82A54"></a-plane>
+      <a-cone color="#E69DFB" radius-bottom="2" radius-top="0.5"></a-cone>
+      <a-entity geometry="primitive: octahedron" color="#222222" position="0 0 -4"></a-entity>
       <a-sky color="#ECECEC"></a-sky>
     </a-scene>
 </body>
