--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 </head>
 <body>
     <a-scene>
-      <a-box position="-4 0.5 3" rotation="0 45 0" color="#23BAC4"></a-box>
-      <a-sphere position="0 -2.25 -5" radius="1.25" color="#E36B2C"></a-sphere>
-      <a-cylinder position="7 0.75 -3" radius="0.5" height="1.5" color="#EF280F"></a-cylinder>
-      <a-plane position="0 0 -8" rotation="-90 0 0" width="4" height="4" color="#C82A54"></a-plane>
-      <a-cone color="#E69DFB" radius-bottom="2" radius-top="0.5"></a-cone>
-      <a-entity geometry="primitive: octahedron" color="#222222" position="9 1 0"></a-entity>
+      <a-box position="-4 0.538 -0.735" rotation="0 45 0" color="#23BAC4"></a-box>
+      <a-sphere position="-1.091 1.395 -6.576" radius="1.25" color="#E36B2C"></a-sphere>
+      <a-cylinder position="3.802 0.750 -3.000" radius="0.5" height="1.5" color="#EF280F"></a-cylinder>
+      <a-plane position="0 0 -8" rotation="-90 0 0" width="20" height="20" color="#C82A54"></a-plane>
+      <a-cone color="#E69DFB" position="0.050 0.502 -2.035" radius-bottom="2" radius-top="0.5"></a-cone>
+      <a-entity geometry="primitive: octahedron" color="#222222" position="6.212 0.496 -0.910"></a-entity>
       <a-sky color="#ECECEC"></a-sky>
     </a-scene>
 </body>
